<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="whitespider.com.adrian.ConfigureWiFiActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView2" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wifi_domains_label_text"
                        android:id="@+id/labelWiFiDomains" />

                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="160dp"
                        android:id="@+id/wiFiDomainsListView"
                        android:entries="@array/test_wifi_names"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:choiceMode="singleChoice"
                        android:listSelector="@color/colorPrimary"
                        android:fastScrollAlwaysVisible="true"
                        android:nestedScrollingEnabled="true" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hidden_domain_label_text"
                        android:id="@+id/hiddenDomainLabel"
                        android:labelFor="@+id/editHiddenDomainText" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editHiddenDomainText"
                        android:layout_marginStart="26dp"
                        android:inputType="text" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:text="@string/security_type_label_text"
                        android:id="@+id/securityTypeLabel"
                        android:labelFor="@+id/securityTypeListView" />

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:id="@+id/securityTypeListView"
                        android:entries="@array/wifi_security_types"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:choiceMode="singleChoice"
                        android:listSelector="@color/colorPrimary" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_label_text"
                        android:id="@+id/passwordLabel"
                        android:labelFor="@+id/editPasswordText" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/editPasswordText" />
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:text="@string/submit_button_text"
                        android:id="@+id/submitButton"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="true"
                        android:layout_column="1" />
                </TableRow>
            </TableLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
